Clenaup Concepts, Update Gov, Remove Filestorage, Remove Governance from Docs -> link to forum

--- a/concepts/skale-network/skale-manager.mdx
+++ b/concepts/skale-network/skale-manager.mdx
@@ -46,6 +46,6 @@ SKALE Manager integrates with:
 
 - [SKALE Network](/concepts/skale-network)
 - [Staking SKL](/get-started/staking/staking-skl)
-- [Governance](/get-started/governance/skale-dao)
+- [Governance](https://forum.skale.network/t/a-proposal-for-skale-networks-on-chain-governance-system/447)
 - [Run a SKALE Chain](/developers/run-a-skale-chain/intro-to-schains)
 
