--- a/concepts/skale-network/skale-network-101.mdx
+++ b/concepts/skale-network/skale-network-101.mdx
@@ -48,4 +48,4 @@ For more information on SKALE Expand, see [SKALE on Base](/get-started/skale-on-
 
 - [Consensus](/concepts/skale-chain/consensus)
 - [Staking SKL](/get-started/staking/staking-skl)
-- [Governance](/get-started/governance/skale-dao)
+- [Governance](https://forum.skale.network/t/a-proposal-for-skale-networks-on-chain-governance-system/447)
