--- a/developers/sdks/overview.mdx
+++ b/developers/sdks/overview.mdx
@@ -5,39 +5,20 @@ description: Official SDKs and libraries for building on SKALE
 
 SKALE provides official SDKs and libraries to help developers build on the network. These SDKs are maintained by the SKALE team and provide first-class support for SKALE's unique features.
 
-## Available SDKs
-
-### Filestorage.js
-
-The official JavaScript SDK for SKALE's native onchain filestorage feature. Store files and websites directly on SKALE Chains.
+## Current entry points
 
 <CardGroup cols={2}>
-  <Card title="Filestorage.js" href="/developers/sdks/filestorage-js">
-    JavaScript SDK for onchain filestorage
+  <Card title="Using Filestorage" href="/developers/native-features/using-filestorage">
+    Overview of SKALE's onchain storage and how it works.
   </Card>
-  <Card title="Using Filestorage" href="/developers/using-filestorage">
-    Learn how to use filestorage in your dApp
+  <Card title="IMA Bridge" href="/developers/native-features/ima-bridge">
+    Move assets and messages between SKALE Chains and Ethereum.
+  </Card>
+  <Card title="Random Number Generation" href="/developers/native-features/random-number-generation">
+    Access SKALE's predeployed RNG for verifiable randomness.
   </Card>
 </CardGroup>
 
-## Installation
-
-Each SDK can be installed via its respective package manager:
-
-```bash
-# Filestorage.js
-npm install @skalenetwork/filestorage.js@~1.0.1
-```
-
-## Getting Started
-
-1. Choose the SDK that matches your needs
-2. Install the SDK using the package manager
-3. Follow the SDK-specific documentation
-4. Check out the examples in the [Cookbook](/cookbook)
-
-## Related Resources
-
-- [Using Filestorage](/developers/using-filestorage) - Guide on using filestorage in your dApp
-- [Build a dApp](/developers/build-a-dapp) - Complete guide to building on SKALE
+## Need help with SDKs?
+If you need sample code, package access, or integration guidance, connect with the SKALE team on [Discord](https://discord.gg/skale).
 
