--- a/get-started/skl-token/skl-token.mdx
+++ b/get-started/skl-token/skl-token.mdx
@@ -30,4 +30,4 @@ SKL delegators/stakers are elligible to bring items up for vote and vote on gove
 When you vote on a proposal you use your SKL tokens to signal approval or opposition of the active proposal up for vote. The more SKL tokens you have, the more influence you can vote with.
 
 - [Staking SKL](/get-started/staking/staking-skl) - Learn about staking SKL tokens
-- [Governance](/get-started/governance/skale-dao) - Participate in SKALE DAO governance
+- [Governance](https://forum.skale.network/t/a-proposal-for-skale-networks-on-chain-governance-system/447) - Participate in SKALE governance discussions
