--- a/get-started/skl-token/tokenomics.mdx
+++ b/get-started/skl-token/tokenomics.mdx
@@ -58,7 +58,7 @@ SKL tokens serve multiple purposes:
 - **Staking** - Validators stake SKL to run nodes
 - **Delegation** - Delegators delegate SKL to validators
 - **Chain Payment** - Developers pay SKL to deploy and rent SKALE Chains
-- **Governance** - SKL holders participate in SKALE DAO governance
+- **Governance** - SKL holders participate in SKALE governance through community proposals
 
 ## Network Economics
 
@@ -92,5 +92,5 @@ For detailed information on SKL token supply, distribution, and unlock schedule,
 
 - [SKL Token Introduction](/get-started/skl-token) - Overview of the SKL token
 - [Staking SKL](/get-started/staking/staking-skl) - Learn about staking SKL tokens
-- [Governance](/get-started/governance/skale-dao) - Participate in SKALE DAO governance
+- [Governance](https://forum.skale.network/t/a-proposal-for-skale-networks-on-chain-governance-system/447) - Participate in SKALE governance discussions
 
