--- a/developers/native-features/using-filestorage.mdx
+++ b/developers/native-features/using-filestorage.mdx
@@ -1,163 +1,48 @@
 ---
 title: Using Filestorage
-description: Use the only native decentralized onchain filestorage
+description: Overview of SKALE's native decentralized filestorage
 ---
 
-SKALE Filestorage is the only onchain and decentralized filestorage in blockchain. The following walks through an example of how to use filestorage on your SKALE Chain.
-
-> Filestorage capacity is dependent on each SKALE Chain. Different size chains and configurations result in different allocations to filestorage, which is a capped resource. Filestorage is ideal for storing static data (i.e one off sets of metadata or images) but not for data that may grow exponentially (i.e user uploads).
-
-## Preparing Files
-
-The following example will be showcasing how to store a static website in filestorage.
-
-## Requirements
-You will need:
-- An RPC Endpoint
-- A private key (with sFUEL) that has been provided with storage space
-- Files (see next section)
+SKALE Filestorage is a native, onchain file service built into every SKALE Chain. It lets you host static assets directly on the chain while keeping them replicated across all validator nodes.
 
 <Aside type="note">
-Storage space must be provided by a SKALE Chain owner. Please contact the SKALE Team in [Discord](https://discord.gg/skale) for support.
+Filestorage capacity depends on the chain size and configuration. It is best suited for static assets and metadata. Need allocation? Contact the SKALE Team in [Discord](https://discord.gg/skale) for support.
 </Aside>
 
-## 1. Prepare Files
+## What is Filestorage?
+- Native onchain storage for static assets such as websites, metadata, images, and configuration files.
+- Files are broken into chunks, validated by the Filestorage contract, and replicated across all nodes on the chain.
+- Content is served through built-in web servers on each node for fast reads.
 
-Anything that builds into HTML, CSS, JS, and media files will work. If you haven't already built a site, you can use the below:
+## How it works
+1. A chain owner allocates storage to an address.
+2. Upload tooling converts your files into EVM-compatible chunks and sends them as transactions to the Filestorage contract.
+3. Nodes store the chunks, replicate them, and expose them at predictable `/fs/<chain-name>/<uploader>/<path>` endpoints.
 
-```html
-<!DOCTYPE html>
-<link rel="stylesheet" type="text/css" href="styles.css">
-<html>
-    <body>
-        <h1>SKALE Filestorage Demo</h1>
-        <p>My first decentralized website!</p>
-        <a href="https://skale.space" target="_blank" rel="noreferrer">SKALE Website</a>
-    </body>
-</html>
-```
+## When to use it
+- Host dApp frontends and static sites without relying on external pinning services.
+- Store NFT metadata and media next to your contracts.
+- Keep deterministic configuration or reference files available to your application.
 
-```css
-body {
-    background-color: #ccc;
-}
-```
+## Getting started (high level)
+1. Choose a SKALE Chain and obtain its RPC endpoint.
+2. Request storage allocation from the chain owner or the SKALE team.
+3. Use the latest Filestorage tooling (reach out to the team for SDKs and examples) to reserve space, upload files, and retrieve them via the `/fs` path.
 
-### 2. Upload to your SKALE Chain
+## Accessing content
+- Addresses in paths must be lowercase and omit the `0x` prefix.
+- Example pattern: `https://<endpoint>/fs/<chain-name>/<uploader-address>/<path/to/file>`.
+- Any node serving the chain can respond with the same content, since files are replicated across the validator set.
 
-Setup your project as follows:
-<Aside type="note">
-The following assumes you have [Node.js](https://nodejs.org/en) installed on your machine and are using a Unix machine (or command prompt).
-</Aside>
+<Note>
+Need help with tooling or migrations? The team can provide updated SDKs, examples, and recommended flows for your use case.
+</Note>
 
-Run the following in your terminal:
-
-```shell
-mkdir skale-fs-website \
-&& cd skale-fs-website \
-&& npm init -y \
-&& npm install @skalenetwork/filestorage.js dotenv \
-&& touch index.js .env \
-&& mkdir test-skale \
-&& cd test-skale
-```
-
-If you are using your own static site, copy the site into the folder called `test-skale`. If you are using the example above,
-run the following in your terminal:
-
-```shell
-touch index.html styles.css
-```
-
-Once complete, copy the above files into their respective files.
-
-### 3. Setup
-
-Open the `index.js` file and copy in the following:
-
-```js
-#! /usr/bin/env node
-
-const Filestorage = require('@skalenetwork/filestorage.js');
-const fs = require('fs');
-const Web3 = require('web3');
-const dotenv = require("dotenv");
-
-dotenv.config();
-
-// If not using the SDK, replace the endpoint below with your SKALE Chain endpoint
-let filestorage = new Filestorage('http://localhost:15000');
-
-// If not using the SDK, replace with the SKALE Chain owner key and address.
-let privateKey = process.env.PRIVATE_KEY || '<SKALE CHAIN OWNER KEY>';
-let address = process.env.ADDRESS || '<SKALE CHAIN OWNER ADDRESS>';
-
-let directoryPath = 'test-skale';
-
-// Bytes of filestorage space to allocate to an address
-// reservedSpace must be >= sum of uploaded files
-const reservedSpace = 3 * 10 ** 8;
-
-const files = fs.readdirSync(directoryPath);
-
-async function upload() {
-    // Owner must reserve space to an address
-    await filestorage.reserveSpace(address, address, reservedSpace, privateKey);
-    for(let i = 0; i < files.length; ++i)  {
-        let content;
-        let contentPath;
-        content = await fs.readFileSync(directoryPath + '/' + files[i]);
-        contentPath = await filestorage.uploadFile(address, files[i], content, privateKey);
-    }
-}
-
-upload();
-```
-
-Open the `.env` file and copy in the following:
-
-```text
-PRIVATE_KEY=YOUR_PRIVATE_KEY
-RPC_URL=RPC_URL_OF_SKALE_CHAIN
-```
-
-### 4. Executing
-
-When executing, this is done via the standard RPC_URL endpoint of your SKALE Chain. This was added to your `.env` file above.
-To execute, run the following:
-
-```shell
-node index.js
-```
-
-Upon executing, [Filestorage.js](https://github.com/skalenetwork/filestorage.js) is taking the files and turning them into EVM chunks which are then sent as transactions
-up to the SKALE Chain.
-
-### 6. Access your website
-
-The following is your endpoint:
-
-```shell
-# Reverse Proxy Endpoint = mainnet.skalenodes.com
-# SKALE Chain Name = honorable-steel-rasalhague
-# Filestorage Full Path = uploader address + path + file name + file extension 
-# Example: https://network.skalenodes.com/fs/chubby-sadr/77333da3492c4BBB9ccf3Ea5bb63d6202f86cda8/index.html
-http(s)://REVERSE_PROXY_ENDPOINT/fs/SKALE_CHAIN_NAME/[FILESTORAGE_FULL_PATH]
-```
-
-If connecting directly to a single node on the SKALE Chain, the following is your endpoint:
-
-```shell
-# Node Domain Name = validator.com
-# SKALE Chain Name = elated-tan-skat
-# Filestorage Full Path = uploader address + path + file name + file extension 
-# Example: https://node1.validator.com/fluffy-marsupial/77333da3492c4BBB9ccf3Ea5bb63d6202f86cda8/index.html
-http(s)://NODE_DOMAIN_NAME/SKALE_CHAIN_NAME/FILESTORAGE_FULL_PATH
-```
-
-<Aside type="note">
-The uploader address in the URLs MUST omit the 0x prefix AND be in lowercase.
-For example: 0x77333Da3492C4BBB9CCF3EA5BB63D6202F86CDA8 must be entered as 77333da3492c4BBB9ccf3Ea5bb63d6202f86cda8
-</Aside>
-
-Checkout [Filestorage.js SDK](/developers/sdks/filestorage-js) for a deeper dive into the available functions.
+<p>
+  <a
+    href="mailto:hi@skale.network?subject=Filestorage%20on%20SKALE"
+    style={{display: "inline-block", padding: "12px 16px", background: "#0052ff", color: "#ffffff", borderRadius: "8px", textDecoration: "none", fontWeight: 600}}
+  >
+    Interested in Filestorage on SKALE? Click here to talk to the team
+  </a>
+</p>
